# cdsapi_helper

./: README.md  pyproject.toml
cdsapi_help/: cli.py  download.py  utils.py
cdsapi_helper/: cli.py  download.py  utils.py
